# intelligence-relativity

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  run_exp00.yml  run_experiments.yml  run_experiments_sp.yml  run_supplementary_experiments.yml  run_test_suite_5.yml  test_demo.yml  test_sp.yml  tests.yml
demos/: __init__.py
demos/dr_evaluation/: __init__.py  apply_dr.py  compute_metrics.py  load_data.py  run_dr_demo.py  test_demo.py  visualize_results.py
src/core/: README.md  __init__.py  generators.py  ssc_computation.py  statistics.py  visualization.py
src/core_sp/: __init__.py  deterministic.py  generators.py  metric_ops.py  sp_metrics.py  ssc_wrapper.py  topology_ops.py  value_gate.py
src/experiments/: exp_00_baseline.py  exp_00_random_baseline.py  exp_01_spatial_vs_random.py  exp_02_grid_arrangement.py  exp_03_line_arrangement.py  exp_04_3d_cube_arrangement.py  exp_05_independence_permutation.py  exp_06_dimension_robustness.py  exp_07_sample_size_robustness.py  exp_08_metric_robustness.py  exp_09_topological_disruption.py  exp_10_rotation_invariance.py  exp_11_coordinate_noise.py  exp_12_semantic_noise.py  exp_13_value_gate_sweep.py  exp_beta_initial_exploration.py  sup_exp_14_bert.py  sup_exp_15_multilingual.py  sup_exp_15_posicon.py  sup_exp_16_multilingual.py
src/experiments_sp/: __init__.py  bert_utils.py  generate_overall_summary.py  generate_summary_all.py
src/experiments_sp/i2_sp_instrument/: __init__.py  sp00_identity_isometry.py  sp01_full_destruction.py  sp02_topology_rewire_curve.py  sp03_layout_robustness.py
src/experiments_sp/o2_topological_dominance_sp/: __init__.py  sp10_metric_invariance.py  sp11_topology_sensitivity.py  sp12_topology_vs_metric.py  sp13_layout_generalization.py
src/experiments_sp/o3_stress_independence_sp_ssc/: __init__.py  sp20_coord_noise_sp_ssc.py  sp21_semantic_noise_sp_ssc.py  sp22_mixed_noise_grid.py
src/experiments_sp/o4_extra_sp/: sp50_lambda_tradeoff_grid_synth.py  sp51_lambda_tradeoff_grid_bert.py
src/experiments_sp/o4_value_gate_tradeoff_sp/: __init__.py  sp30_lambda_sweep_synth.py  sp31_lambda_sweep_bert.py
src/experiments_sp/sp_robustness/: __init__.py  sp40_dimN_sp_robustness.py  sp41_layout_topology_sp_robustness.py  sp42_knn_k_robustness.py
src/experiments_sp/utils/: save_results.py
tests/: test_core.py  test_deterministic.py  test_experiments.py  test_ssc_computation.py
tests/i1/: test_ssc_full_pipeline.py
tests/test_core_sp/: test_generators.py  test_metric_ops.py  test_sp_metrics.py  test_ssc_wrapper.py  test_topology_ops.py  test_value_gate.py
tests/test_experiments_sp/: test_i2_instrument.py  test_o2_dominance.py  test_o3_independence.py  test_o4_tradeoff.py  test_robustness.py
tests/test_integration/: test_cross_implementation.py  test_determinism.py
