[project]
name = "intelligence-relativity"
version = "1.1.0"
description = "Empirical Validation of the Relativity Theory of Intelligence"
authors = [{name = "Hideki"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "numpy>=2.3.0",
    "scipy>=1.16.0",
    "matplotlib>=3.10.0",
]

[project.optional-dependencies]
bert = [
    "transformers>=4.47.0",
    "torch>=2.6.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
